feat: initial version

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,6 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking"
@@ -17,17 +16,9 @@
     "createDefaultProgram": true,
     "tsconfigRootDir": "./"
   },
-  "plugins": ["react", "@typescript-eslint"],
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "import/extensions": "off",
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
-    "react/prop-types": "off",
-    "react/display-name": "off"
+    "@typescript-eslint/explicit-function-return-type": "off"
   }
 }
