--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "effector-logger",
-  "version": "0.1.5",
-  "module": "./dist/index",
+  "version": "0.2.5",
   "main": "./dist/common",
   "typings": "./dist/index.d.ts",
   "license": "MIT",
@@ -10,40 +9,36 @@
     "dist"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "build": "webpack",
     "lint": "eslint --ext .ts,.tsx src",
     "commit": "git-cz",
-    "prepare": "yarn build"
+    "prepublish": "yarn build"
   },
   "peerDependencies": {
-    "effector": "^20.11.1"
+    "effector": "^20.11.1",
+    "effector-inspector": "^0.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
-    "@rollup/plugin-alias": "^2.2.0",
+    "@types/node": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "commitizen": "4.0.3",
     "cz-conventional-changelog": "3.0.2",
     "effector": "^20.11.1",
-    "effector-inspector": "^0.0.1",
     "eslint": "^6.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "3.1.0",
     "prettier": "^1.19.1",
-    "rollup": "^1.26.2",
-    "rollup-plugin-babel": "^4.2.0",
-    "rollup-plugin-cleaner": "^1.0.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-typescript2": "^0.25.3",
-    "typescript": "^3.7.4"
+    "terser-webpack-plugin": "^2.3.5",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   },
   "optionalDependencies": {
-    "effector-inspector": "^0.0.1"
+    "effector-inspector": "^0.1.2"
   },
   "dependencies": {},
   "config": {
