--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "effector-logger",
-  "version": "0.4.0",
+  "version": "0.5.0-0",
   "main": "./dist/common",
   "typings": "./dist/index.d.ts",
   "license": "MIT",
@@ -22,6 +22,7 @@
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
     "@types/node": "^13.7.1",
+    "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "commitizen": "4.0.3",
@@ -42,7 +43,8 @@
   },
   "dependencies": {
     "@types/just-debounce-it": "^1.1.0",
-    "just-debounce-it": "^1.1.0"
+    "just-debounce-it": "^1.1.0",
+    "set-value": "^3.0.1"
   },
   "config": {
     "commitizen": {
