--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "effector-logger",
-  "version": "0.5.0-0",
-  "main": "./dist/common",
+  "version": "0.5.0-4",
+  "main": "./dist/index",
   "typings": "./dist/index.d.ts",
   "license": "MIT",
   "repository": "github:sergeysova/effector-logger",
   "files": [
-    "dist"
+    "dist",
+    "attach.js",
+    "attach.d.ts"
   ],
   "scripts": {
     "build": "webpack",
