--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "attach.d.ts"
   ],
   "scripts": {
+    "start": "parcel serve ./usage/index.html",
     "build": "webpack",
     "lint": "eslint --ext .ts,.tsx src",
     "commit": "git-cz",
@@ -21,6 +22,7 @@
     "effector-inspector": "^0.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
     "@types/node": "^13.7.1",
@@ -33,6 +35,7 @@
     "eslint": "^6.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "3.1.0",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "^6.2.1",
