--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.8.4",
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
+    "@types/detect-node": "^2.0.0",
     "@types/node": "^13.7.1",
     "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "@types/just-debounce-it": "^1.1.0",
+    "detect-node": "2.0.4",
     "just-debounce-it": "^1.1.0",
     "set-value": "^3.0.1"
   },
