--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "effector-logger",
-  "version": "0.6.0-3",
+  "version": "0.6.0",
   "main": "./dist/index",
   "typings": "./dist/index.d.ts",
   "license": "MIT",
