ci: more labels for pr-labeler

--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,6 +1,5 @@
-feature: ['feature/*', 'feat/*']
+feature: ['feature/*', 'feat/*', 'add-', 'create-']
 test: ['test/*', 'tests/*']
-fix: ['fix/*', 'hotfix/*', 'bugfix/*']
+fix: ['fix/*', 'hotfix/*', 'bugfix/*', 'fix-']
 chore: chore/*
-fixed-branch: fixed-branch-name
 refactor: ['refactor/*', 'refactoring/*']
