fix: add inspector to package files

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "files": [
     "dist",
     "attach.js",
-    "attach.d.ts"
+    "attach.d.ts",
+    "inspector.js",
+    "inspector.d.ts"
   ],
   "scripts": {
     "start": "parcel serve ./usage/index.html",
