--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
     "@types/detect-node": "^2.0.0",
+    "@types/just-debounce-it": "^1.1.0",
     "@types/node": "^13.7.1",
     "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
@@ -38,13 +39,12 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "3.1.0",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^1.19.1",
+    "prettier": "^2.1.2",
     "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "@types/just-debounce-it": "^1.1.0"
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "detect-node": "2.0.4",
