--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "no-unused-vars": "warn"
   },
+  "parser": "@babel/eslint-parser",
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
