--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "attach.js",
     "attach.d.ts",
     "inspector.js",
-    "inspector.d.ts"
+    "inspector.d.ts",
+    "macro.js",
+    "macro.d.ts"
   ],
   "scripts": {
     "start": "parcel serve ./usage/index.html",
@@ -20,10 +22,11 @@
     "prepublish": "yarn build"
   },
   "peerDependencies": {
-    "effector": "^21.5.0"
+    "effector": "^21.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.13.10",
+    "@babel/eslint-parser": "^7.13.10",
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
     "@types/detect-node": "^2.0.0",
@@ -32,12 +35,15 @@
     "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
+    "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-tester": "^10.0.0",
     "commitizen": "4.0.3",
     "cz-conventional-changelog": "3.0.2",
-    "effector": "^21.5.0",
+    "effector": "^21.8.7",
     "eslint": "^6.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "3.1.0",
+    "jest": "^26.6.3",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
     "terser-webpack-plugin": "^2.3.5",
@@ -47,6 +53,8 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@babel/helper-module-imports": "^7.12.13",
+    "@babel/traverse": "^7.13.0",
     "detect-node": "2.0.4",
     "effector-inspector": "^0.4.1",
     "just-debounce-it": "^1.1.0",
