feat: move from webpack to rollup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "strict": true,
     "target": "es6",
     "declaration": true,
-    "declarationDir": "./dist",
+    "emitDeclarationOnly": true,
+    "declarationDir": "./",
     "baseUrl": "./",
     "rootDir": "./src",
     "outDir": "./dist",
