--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "start": "parcel serve ./usage/index.html",
-    "build": "webpack",
+    "build": "rollup --config rollup.config.ts --configPlugin typescript",
     "lint": "eslint --ext .ts,.tsx src",
     "commit": "git-cz",
     "prepublish": "yarn build"
@@ -48,10 +48,12 @@
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
     "terser-webpack-plugin": "^2.3.5",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "typescript": "=4.3.5",
+    "rollup": "^2.56.3",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
     "detect-node": "2.0.4",
