--- a/package.json
+++ b/package.json
@@ -47,13 +47,16 @@
     "prepublish": "yarn build"
   },
   "peerDependencies": {
-    "effector": "^21.8.7"
+    "effector": "^22.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/eslint-parser": "^7.13.10",
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
     "@types/detect-node": "^2.0.0",
     "@types/just-debounce-it": "^1.1.0",
     "@types/node": "^13.7.1",
@@ -64,20 +67,17 @@
     "babel-plugin-tester": "^10.0.0",
     "commitizen": "4.0.3",
     "cz-conventional-changelog": "3.0.2",
-    "effector": "^21.8.11",
+    "effector": "^22.1.0",
     "eslint": "^6.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "3.1.0",
     "jest": "^26.6.3",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
-    "terser-webpack-plugin": "^2.3.5",
-    "typescript": "=4.3.5",
     "rollup": "^2.56.3",
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-typescript": "^8.2.5",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "terser-webpack-plugin": "^2.3.5",
+    "typescript": "=4.3.5"
   },
   "dependencies": {
     "detect-node": "2.0.4",
