--- a/package.json
+++ b/package.json
@@ -1,7 +1,31 @@
 {
   "name": "effector-logger",
   "version": "0.11.0",
-  "main": "./dist/index",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "default": "./dist/index.mjs"
+    },
+    "./attach": {
+      "import": "./dist/attach.mjs",
+      "require": "./dist/attach.js",
+      "default": "./dist/attach.mjs"
+    },
+    "./inspector": {
+      "import": "./dist/inspector.mjs",
+      "require": "./dist/inspector.js",
+      "default": "./dist/inspector.mjs"
+    },
+    "./babel-plugin": {
+      "default": "./babel-plugin.js"
+    },
+    "./macro": {
+      "default": "./macro.js"
+    }
+  },
   "typings": "./dist/index.d.ts",
   "license": "MIT",
   "repository": "github:effector/logger",
