--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "jsx": "react",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
@@ -15,7 +15,7 @@
     "target": "es6",
     "declaration": true,
     "emitDeclarationOnly": true,
-    "declarationDir": "./",
+    "declarationDir": "./dist",
     "baseUrl": "./",
     "rootDir": "./src",
     "outDir": "./dist",
