--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,19 +1,48 @@
 categories:
-  - title: Features
+  - title: '⚠️ Breaking changes'
+    label: 'BREAKING CHANGES'
+
+  - title: '🚀 Features'
     labels:
-      - feature
-      - enhancement
-  - title: Changes
+      - 'feature'
+      - 'enhancement'
+
+  - title: '🐛 Bug Fixes'
     labels:
-      - refactor
-      - chore
-  - title: Bug Fixes
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+
+  - title: '🧰 Maintenance'
     labels:
-      - fix
-      - bug
-  - title: Tests
+      - 'chore'
+      - 'dependencies'
+
+  - title: '📚 Documentation'
+    label: 'documentation'
+
+  - title: '🧪 Tests'
+    label: 'tests'
+
+  - title: '🏎 Optimizations'
+    label: 'optimizations'
+
+version-resolver:
+  major:
     labels:
-      - test
+      - 'BREAKING CHANGES'
+  minor:
+    labels:
+      - 'feature'
+      - 'enhancement'
+  patch:
+    labels:
+      - 'fix'
+  default: patch
+
+name-template: 'v$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
+
 change-template: '- $TITLE #$NUMBER (@$AUTHOR)'
 template: |
   $CHANGES
