--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "scripts": {
     "start": "parcel serve ./usage/index.html",
     "build": "rollup --config rollup.config.ts --configPlugin typescript",
+    "build:integration": "rm -rf ./dist-test && BUILD_KIND=integration yarn build && cp {package.json,babel-plugin.js,macro.js} ./dist-test",
     "lint": "eslint --ext .ts,.tsx src",
     "test": "echo no tests yet",
     "commit": "git-cz",
