--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   ],
   "scripts": {
     "start": "parcel serve ./usage/index.html",
-    "build": "rollup --config rollup.config.ts --configPlugin typescript",
+    "build": "ts-node ./scripts/build.ts",
     "build:integration": "rm -rf ./dist-test && BUILD_KIND=integration yarn build && cp {package.json,babel-plugin.js,macro.js} ./dist-test",
     "lint": "eslint --ext .ts,.tsx src",
     "test": "echo no tests yet",
@@ -90,6 +90,7 @@
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2",
     "terser-webpack-plugin": "^2.3.5",
+    "ts-node": "^10.4.0",
     "typescript": "=4.3.5"
   },
   "dependencies": {
