--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   ],
   "scripts": {
     "start": "parcel serve ./usage/index.html",
-    "build": "ts-node ./scripts/build.ts",
+    "build": "node --loader ts-node/esm ./scripts/build.ts",
     "build:integration": "rm -rf ./dist-test && BUILD_KIND=integration yarn build",
     "lint": "eslint --ext .ts,.tsx src",
     "test": "echo no tests yet",
