--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -40,14 +40,14 @@ jobs:
       - name: Set version to package from github release
         if: ${{ steps.latest-package.outputs.latest-release == '' }}
         run: npm version --force --no-git-tag-version ${{ steps.github-release.outputs.release }}
-        working-directory: './dist-test/'
+        working-directory: './dist/'
 
       - name: Add commit SHA to package version
         run: npm version --force --no-git-tag-version prerelease --preid=${{ github.sha }}
-        working-directory: './dist-test/'
+        working-directory: './dist/'
 
       - name: Publish to Github NPM registry
-        working-directory: './dist-test/'
+        working-directory: './dist/'
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
@@ -56,7 +56,7 @@ jobs:
         uses: sergeysova/jq-action@v2
         id: version
         with:
-          cmd: 'jq .version dist-test/package.json -r'
+          cmd: 'jq .version dist/package.json -r'
 
       - name: Published ${{ steps.version.outputs.value }}
         run: echo @effector/logger@${{ steps.version.outputs.value }}
