--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,11 +38,14 @@ jobs:
         with:
           version: ${{ steps.version.outputs.tag }}
           git-tag-version: false
+          package: 'dist/'
 
       - name: Create NPM config
+        working-directory: './dist/'
         run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish package
+        working-directory: './dist/'
         run: npm publish
