--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
       "default": "./macro.js"
     }
   },
+  "typesVersions": {
+    "*": {
+      "attach": ["dist/attach.d.ts"]
+    }
+  },
   "typings": "./dist/index.d.ts",
   "license": "MIT",
   "repository": "github:effector/logger",
