--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -7,16 +7,17 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Use Node.js v14.x
-        uses: actions/setup-node@v1
+      - name: Use Node.js v16.x
+        uses: actions/setup-node@v3
         with:
-          node-version: v14.x
+          node-version: v16.x
+          cache: 'yarn'
           registry-url: 'https://npm.pkg.github.com'
 
       - name: Install dependencies
@@ -48,7 +49,7 @@ jobs:
 
       - name: Publish to Github NPM registry
         working-directory: './dist/'
-        run: npm publish
+        run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
 
