--- a/integration/cra/package.json
+++ b/integration/cra/package.json
@@ -38,6 +38,11 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0"
+    "@babel/core": "^7.19.3",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@testing-library/dom": "^7.21.4",
+    "@types/jest": "^27.4.0",
+    "typescript": "4.6.4"
   }
 }
