--- a/integration/custom/package.json
+++ b/integration/custom/package.json
@@ -39,6 +39,7 @@
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "babel-eslint": "^10.0.0",
     "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.2",
     "eslint": "^7.14.0",
