--- a/integration/cra/package.json
+++ b/integration/cra/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
+  "packageManager": "pnpm@7.11.0",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
