--- a/integration/custom-attach/package.json
+++ b/integration/custom-attach/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "packageManager": "pnpm@7.11.0",
   "dependencies": {
     "effector": "^22.1.2",
     "effector-react": "^22.0.6",
