--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commit": "git-cz",
     "prepublish": "yarn build"
   },
+  "packageManager": "pnpm@7.11.0",
   "peerDependencies": {
     "effector": "^22.1.0"
   },
