--- a/integration/nodejs/package.json
+++ b/integration/nodejs/package.json
@@ -7,8 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "effector": "^22.1.2",
-    "jest": "^27.4.7"
+    "effector": "^22.1.2"
   },
   "packageManager": "pnpm@7.11.0",
   "devDependencies": {
@@ -16,6 +15,8 @@
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.0",
-    "babel-jest": "^27.4.6"
+    "@types/node": "^18.8.0",
+    "babel-jest": "^27.4.6",
+    "jest": "^29.1.2"
   }
 }
