--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": "github:effector/logger",
   "scripts": {
-    "start": "parcel serve ./usage/index.html",
+    "start": "vite ./usage",
     "build": "rm -rf ./dist && ts-node ./scripts/build.ts",
     "build:integration": "LIB_NAME=@effector/logger yarn build",
     "lint": "eslint --ext .ts,.tsx src",
@@ -24,13 +24,12 @@
     "@babel/eslint-parser": "^7.13.10",
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
-    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-typescript": "^8.2.5",
     "@types/babel__core": "^7.1.19",
     "@types/detect-node": "^2.0.0",
-    "@types/just-debounce-it": "^1.1.0",
     "@types/node": "^13.7.1",
     "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
@@ -45,12 +44,12 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "3.1.0",
     "jest": "^26.6.3",
-    "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
-    "rollup": "^2.56.3",
+    "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.4.0",
-    "typescript": "=4.3.5"
+    "typescript": "=4.3.5",
+    "vite": "^3.1.4"
   },
   "dependencies": {
     "detect-node": "2.0.4",
