--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "typings": "./dist/index.d.ts",
   "license": "MIT",
   "repository": "github:effector/logger",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "start": "vite ./usage",
     "build": "rm -rf ./dist && ts-node ./scripts/build.ts",
