--- a/integration/custom/package.json
+++ b/integration/custom/package.json
@@ -14,10 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@effector/logger": "link:../../dist",
     "effector": "^22.1.2",
+    "effector-logger": "link:../../dist",
     "effector-react": "^22.0.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -26,13 +28,13 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/runtime": "^7.13.9",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^29.2.4",
     "@types/node": "^14.14.32",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.1",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "@types/webpack": "^4.41.26",
@@ -41,7 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "babel-eslint": "^10.0.0",
-    "babel-jest": "^27.4.6",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^8.2.2",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
@@ -52,7 +54,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.4.7",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jsdom": "^20.0.3",
     "prettier": "^2.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
