--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "scripts": {
     "start": "vite ./usage",
     "build": "rm -rf ./dist && ts-node ./scripts/build.ts",
-    "build:integration": "LIB_NAME=@effector/logger yarn build",
+    "build:integration": "LIB_NAME=@effector/logger pnpm build",
     "lint": "eslint --ext .ts,.tsx src",
     "test": "echo no tests yet",
     "commit": "git-cz",
-    "prepublish": "yarn build"
+    "prepublish": "pnpm build"
   },
   "packageManager": "pnpm@7.11.0",
   "peerDependencies": {
@@ -46,7 +46,7 @@
     "eslint": "^6.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "3.1.0",
-    "jest": "^26.6.3",
+    "jest": "^29.3.1",
     "prettier": "^2.1.2",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
