--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-real-version-will-be-set-on-ci",
   "main": "./index.js",
   "module": "./index.mjs",
-  "typings": "./dist/index.d.ts",
+  "typings": "./index.d.ts",
   "license": "MIT",
   "repository": "github:effector/logger",
   "publishConfig": {
@@ -33,7 +33,7 @@
     "@rollup/plugin-typescript": "^8.2.5",
     "@types/babel__core": "^7.1.19",
     "@types/detect-node": "^2.0.0",
-    "@types/node": "^13.7.1",
+    "@types/node": "^18.14.2",
     "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
@@ -51,7 +51,7 @@
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.4.0",
-    "typescript": "=4.3.5",
+    "typescript": "^4.9.5",
     "vite": "^3.1.8"
   },
   "dependencies": {
@@ -66,19 +66,21 @@
     }
   },
   "files": [
-    "dist",
     "attach.js",
     "attach.js.map",
+    "attach.d.ts",
     "attach.mjs",
     "attach.mjs.map",
     "index.js",
     "index.js.map",
     "index.mjs",
     "index.mjs.map",
+    "index.d.ts",
     "inspector.js",
     "inspector.js.map",
     "inspector.mjs",
     "inspector.mjs.map",
+    "inspector.d.ts",
     "babel-plugin.js",
     "macro.js",
     "macro.d.ts"
@@ -110,7 +112,13 @@
   "typesVersions": {
     "*": {
       "attach": [
-        "dist/attach.d.ts"
+        "attach.d.ts"
+      ],
+      "inspector": [
+        "inspector.d.ts"
+      ],
+      "macro": [
+        "macro.d.ts"
       ]
     }
   }
