test: by default inspector is not initialized

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@rollup/plugin-typescript": "^8.2.5",
     "@types/babel__core": "^7.1.19",
     "@types/detect-node": "^2.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
@@ -83,7 +84,8 @@
     "inspector.d.ts",
     "babel-plugin.js",
     "macro.js",
-    "macro.d.ts"
+    "macro.d.ts",
+    "lib.d.ts"
   ],
   "exports": {
     ".": {
