--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "packageManager": "pnpm@7.11.0",
   "peerDependencies": {
-    "effector": "^22.1.0"
+    "effector": "^22.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
@@ -38,12 +38,11 @@
     "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
-    "babel-plugin-macros": "^3.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-tester": "^10.0.0",
     "commitizen": "4.0.3",
     "cz-conventional-changelog": "3.0.2",
-    "effector": "^22.1.0",
+    "effector": "22.8.2",
     "eslint": "^6.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "3.1.0",
@@ -57,9 +56,7 @@
   },
   "dependencies": {
     "detect-node": "2.0.4",
-    "effector-inspector": "^0.10.3",
-    "just-debounce-it": "^1.1.0",
-    "set-value": "4.0.1"
+    "just-debounce-it": "^1.1.0"
   },
   "config": {
     "commitizen": {
