refactor(core): now uses Inspect API
logger internals are transferred to Inspect API, public api also changes

BREAKING CHANGE: Public API now requires explicit `attachLogger` call

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,3 @@
 {
-  "plugins": [
-    ["effector/babel-plugin", { "addLoc": true, "addNames": true }],
-    ["effector/babel-plugin", { "addLoc": true, "addNames": true, "importName": "../../src" }, "local"]
-  ]
+  "plugins": [["effector/babel-plugin", { "addLoc": true, "addNames": true }]]
 }
