refactor(core): added tests and updated build
There are now tests that are run against dist. Dist also updated to not include incorrect files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         run: pnpm install
 
       - name: 🔧 Build package
-        run: pnpm build:integration
+        run: pnpm build
 
       - name: 🧪 Test
         run: pnpm test
