--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "scripts": {
     "start": "vite ./usage",
     "build": "rm -rf ./dist && ts-node ./scripts/build.ts",
-    "build:integration": "LIB_NAME=@effector/logger pnpm build",
     "lint": "eslint --ext .ts,.tsx src",
-    "test": "echo no tests yet",
+    "test": "vitest run",
     "commit": "git-cz",
     "prepublish": "pnpm build"
   },
@@ -52,7 +51,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.9.5",
-    "vite": "^3.1.8"
+    "vite": "^3.1.8",
+    "vitest": "^0.31.0"
   },
   "dependencies": {
     "detect-node": "2.0.4",
@@ -64,25 +64,11 @@
     }
   },
   "files": [
-    "attach.js",
-    "attach.js.map",
-    "attach.d.ts",
-    "attach.mjs",
-    "attach.mjs.map",
     "index.js",
     "index.js.map",
     "index.mjs",
     "index.mjs.map",
-    "index.d.ts",
-    "inspector.js",
-    "inspector.js.map",
-    "inspector.mjs",
-    "inspector.mjs.map",
-    "inspector.d.ts",
-    "babel-plugin.js",
-    "macro.js",
-    "macro.d.ts",
-    "lib.d.ts"
+    "index.d.ts"
   ],
   "exports": {
     ".": {
@@ -90,35 +76,6 @@
       "require": "./index.js",
       "default": "./index.mjs"
     },
-    "./index.mjs": "./index.mjs",
-    "./attach": {
-      "import": "./attach.mjs",
-      "require": "./attach.js",
-      "default": "./attach.mjs"
-    },
-    "./inspector": {
-      "import": "./inspector.mjs",
-      "require": "./inspector.js",
-      "default": "./inspector.mjs"
-    },
-    "./babel-plugin": {
-      "default": "./babel-plugin.js"
-    },
-    "./macro": {
-      "default": "./macro.js"
-    }
-  },
-  "typesVersions": {
-    "*": {
-      "attach": [
-        "attach.d.ts"
-      ],
-      "inspector": [
-        "inspector.d.ts"
-      ],
-      "macro": [
-        "macro.d.ts"
-      ]
-    }
+    "./index.mjs": "./index.mjs"
   }
 }
