--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   ],
   "exports": {
     ".": {
+      "types": "./index.d.ts",
       "import": "./index.mjs",
       "require": "./index.js",
       "default": "./index.mjs"
