--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "packageManager": "pnpm@7.11.0",
   "peerDependencies": {
-    "effector": "^22.8.8 | ^23.0.0"
+    "effector": "^22.8.8 || ^23.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
