--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,17 @@
-name: Test Package
+name: CI
 
 on: [push]
 
 jobs:
   test-package:
-    runs-on: ubuntu-22.04
+    name: Test on Node v${{ matrix.node }} and ${{ matrix.os }}
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node: ['16.x', '18.x', '20.x']
+        os: [ubuntu-latest, macOS-latest]
+
     steps:
       - name: 🛎️ Checkout
         uses: actions/checkout@v3
@@ -12,10 +19,10 @@ jobs:
       - name: 📦 Setup pnpm
         uses: pnpm/action-setup@v2
 
-      - name: 🐧 Use Node.js v18.x
+      - name: 🐧 Use Node.js ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
-          node-version: v18.x
+          node-version: ${{ matrix.node }}
           cache: 'pnpm'
 
       - name: 🔍 Install dependencies
