--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "commit": "git-cz",
     "prepublish": "pnpm build"
   },
-  "packageManager": "pnpm@7.11.0",
+  "packageManager": "pnpm@8.11.0",
   "peerDependencies": {
     "effector": "^22.8.8 || ^23.0.0"
   },
@@ -41,7 +41,7 @@
     "babel-plugin-tester": "^10.0.0",
     "commitizen": "4.0.3",
     "cz-conventional-changelog": "3.0.2",
-    "effector": "23.0.0",
+    "effector": "^23.0.0",
     "eslint": "^6.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "3.1.0",
